--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -123,6 +123,7 @@ CreatePythonTest(SinglePhase/SinglePhase_2DPoiseuilleFlow_outputFields.py)
 CreatePythonTest(SinglePhase/SinglePhase_2DAirfoil.py)
 CreatePythonTest(SinglePhase/SinglePhase_2DSphericalExplosion_unstructured.py)
 CreatePythonTest(SinglePhase/SinglePhase_2DSphericalExplosion_HEXAGON.py)
+CreatePythonTest(SinglePhase/SinglePhase_3DSphericalExplosion_TETRAHEDRON.py)
 CreatePythonTest(SinglePhase/SinglePhase_2DHeatedChannelInclined.py)
 CreatePythonTest(SinglePhase/SinglePhase_2DThermalDiffusion.py)
 CreatePythonTest(SinglePhase/SinglePhase_2DWallHeatedChannel_ChangeSect.py)
