Improved code quality (closure of if/endif statements)

--- a/CoreFlows/CMakeLists.txt
+++ b/CoreFlows/CMakeLists.txt
@@ -18,23 +18,23 @@ set (SLEPC_DIR            OFF CACHE STRING "SLEPc library path" )
 
 enable_testing()											   #
 # Debug mode activates testing and profiling --------------------------------------------------------------#
-if (CMAKE_BUILD_TYPE STREQUAL Debug)									   #
+if   (CMAKE_BUILD_TYPE STREQUAL Debug)									   #
 													   #
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg --coverage")						   #
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg --coverage")					   #
  SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg --coverage")				   #
 													   #
-endif ()												   #
+endif(CMAKE_BUILD_TYPE STREQUAL Debug)												   #
 													   #
 #----------------------------------------------------------------------------------------------------------#
 
 # Swig interface -------------------------------------------------------------------------------------------#
                                                                                                             #
-if (COREFLOWS_WITH_PYTHON)                                                                                  #
+if   (COREFLOWS_WITH_PYTHON)                                                                                  #
    set (CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS}, python-dev, python-numpy, swig")     #
    set (CPACK_RPM_PACKAGE_REQUIRES "${CPACK_RPM_PACKAGE_REQUIRES}, python-devel, numpy, swig")              #
    set (CoreFlows_SWIG_DIR ${CoreFlows_SOURCE_DIR}/swig)                                                    #
-endif ()                                                                                                    #
+endif(COREFLOWS_WITH_PYTHON)                                                                                                    #
                                                                                                             #
 #-----------------------------------------------------------------------------------------------------------#
 
@@ -51,13 +51,13 @@ set( CoreFlows_INCLUDES
 
 add_subdirectory (${CoreFlows_SRC})
 add_subdirectory (${CoreFlows_EXAMPLES})
-if (COREFLOWS_WITH_PYTHON)                                                                                  #
+if   (COREFLOWS_WITH_PYTHON)                                                                                  #
    add_subdirectory (${CoreFlows_SWIG_DIR})                                                                 #
-endif ()                                                                                                    #
+endif(COREFLOWS_WITH_PYTHON)                                                                                                    #
 
 # Documentation --------------------------------------------------------------------------------------------#
                                                                                                             #
-if (COREFLOWS_WITH_DOCUMENTATION)                                                                           #
+if   (COREFLOWS_WITH_DOCUMENTATION)                                                                           #
   configure_file (Doxyfile.in ${PROJECT_BINARY_DIR}/Doxyfile  @ONLY IMMEDIATE)                              #
   FILE(GLOB_RECURSE CoreFlows_Documentation ${CoreFlows_SOURCE_DIR}/Documentation *.dox)                    #
   SET(Documentation_SRC                                                                                     #
@@ -68,16 +68,16 @@ if (COREFLOWS_WITH_DOCUMENTATION)                                               
   SOURCES ${PROJECT_BINARY_DIR}/Doxyfile)			                                            #
   install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc/html DESTINATION share/doc/coreflows-dev-doc OPTIONAL)                  #
   INSTALL(FILES ${CoreFlows_SOURCE_DIR}/Documentation/CoreFlows.pdf DESTINATION share/doc OPTIONAL)	    #
-endif ()                                                                                                    #
+endif(COREFLOWS_WITH_DOCUMENTATION)                                                                                                    #
                                                                                                             #
 # ------------- --------------------------------------------------------------------------------------------#
 
 # Graphic interface-----------------------------------------------------------------------------------------#
      													    #
-if (COREFLOWS_WITH_GUI) 														    #
+if   (COREFLOWS_WITH_GUI) 														    #
   set (CoreFlows_GUI_DIR ${CoreFlows_SOURCE_DIR}/gui)                                                        #
   add_subdirectory(${CoreFlows_GUI_DIR})
-endif ()                                                                                                    #
+endif(COREFLOWS_WITH_GUI)                                                                                                    #
 													    #
 # ------------- --------------------------------------------------------------------------------------------#
 
@@ -108,6 +108,6 @@ configure_file(
 
 
 # Packaging
-if (COREFLOWS_WITH_PACKAGE)
+if   (COREFLOWS_WITH_PACKAGE)
   include (${CoreFlows_SOURCE_DIR}/CPackLists.txt)
-endif ()
+endif(COREFLOWS_WITH_PACKAGE)
